# NewTimeTable

./: .swp  Dockerfile  README.md  docker-compose.yml  main.py  notmain.py  pyproject.toml
connection/: __init__.py  connections.py  data.py
decorators/: admin.py  callbaks.py  commands.py
keyboards/: markup.py
logic/: __init__.py  append_data.py  dispatch.py  edit_message.py  get_dict.py  get_text.py  output_text.py  process.py  reg_check.py  scheduled.py  send_message.py  states.py
markup/: __init__.py  markup.py
storage/: connection.py
