[tool.poetry]
name = "newtimetable"
version = "0.1.0"
description = ""
authors = ["nagraver <ttolla25@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pymongo = "^4.7.3"
aiogram = "^3.8.0"
python-dotenv = "^1.0.1"
httpx = "^0.27.0"
sentry-sdk = "^2.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
