[project]
name = "newtimetable"
version = "0.1.0"
description = ""
authors = [
    {name = "nagraver",email = "ttolla25@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiogram (>=3.18.0,<4.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "pymongo (>=4.11.1,<5.0.0)",
    "redis (>=5.2.1,<6.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
